<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/splash"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/app_heading"
        android:textColor="#DAA520"
        android:textSize="50sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/app_sub_heading"
        android:textColor="#DAA520"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_basic_rule"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/btn_background"
        android:gravity="center"
        android:text="@string/btn_one"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/tv_easy"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/btn_background"
        android:gravity="center"
        android:text="@string/btn_second"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/tv_medium"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/btn_background"
        android:gravity="center"
        android:text="@string/btn_third"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/tv_hard"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/btn_background"
        android:gravity="center"
        android:text="@string/btn_fourth"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />
</LinearLayout>
