<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splash">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_basic_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_rule"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/pattern_img1"
            android:contentDescription="@string/img_des" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:text="@string/basic_rule_para_second"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/pattern_img2"
            android:contentDescription="@string/img_des" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:text="@string/basic_rule_para_third"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/pattern_img3"
            android:contentDescription="@string/img_des" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:text="@string/basic_rule_para_fourth"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/pattern_img4"
            android:contentDescription="@string/img_des" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:text="@string/basic_rule_para_five"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>